--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
             </div>
         </section>
 
-        <footer id="contato" class="footer navbar text-light py-4 border-top" style="border-color: #475e2c;">
+        <footer id="contato" class="footer navbar text-light py-4 border-top" style="background-color: #C29049;">
             <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
 
                 <div class="footer-info mb-3 mb-md-0 text-center text-md-start">
